2003/02/23  fadden
    - Added test-twirl to samples.

2003/02/22  fadden
    - Turn off EOL conversion when extracting disk images.
    - Added NuTestRecord().

2003/02/18  fadden
    - Added "original pathname" fields to NuFileDetails and NuErrorStatus.
    - Changed callback setters to return NuCallback instead of NuError.
    - Switched to case-sensitive filename comparisons.

2003/02/08  fadden
    - Upped version to v2.0.0.
    - Changed DataSource API.  Removed "doClose" and added an optional
      callback function that handles releasing of resources.  Necessary
      to make Win32 DLLs work right with unsuspecting apps.
    - Changed DataSource "copy" function to use refcounting.  Still
      not quite right, but it'll do for now.  Memory leaks in DataSource
      handling appear to be fixed.  (I love valgrind.)

2003/01/10  fadden
    - Added version numbers to header.
    - Added kNuValueMaskThreadless to control handling of "threadless"
      records.  Now records without threads can be silently "fixed" so
      the application does need to handle them specially.

2002/12/06  fadden
    - Made changes to allow NufxLib to be built as a Win32 DLL.

2002/10/20  ***** v1.1.0 shipped *****

2002/10/10  fadden
    - changed behavior so that deleting all records is allowed

2002/10/09  fadden
    - added support for "bzip2" compression via libbz2
    - added ability to selectively disable compression methods
    - added "-m" flag to samples/launder so you can specify compression

2002/09/30  fadden
    - added support for "deflate" compression via zlib

2002/09/27  fadden
    - added support for 12-bit and 16-bit LZC (UNIX compress)

2002/09/26  fadden
    - added support for SQueezed files (both compress and expand)

2002/09/23  fadden
    - ran the code through valgrind; found and fixed some minor bugs

2002/09/20  fadden
    - pulled the sources out and started fiddling with them again
    - changed hard tabs to spaces
