@@ -1,3 +1,6 @@
+2003/03/10  fadden
+    - Added support for automatic high-ASCII text stripping.
+
 2003/02/23  fadden
     - Added test-twirl to samples.
 
